# ogrep-rs

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: build-release.yml
src/: context.rs  error.rs  io.rs  main.rs  options.rs  printer.rs  tests.rs  util.rs
src/contexts/: children.rs  indentation.rs  mod.rs  preprocessor.rs  textual.rs
